log
Fri 12 May 2023 12:35:09 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
f436564
Fri 12 May 2023 12:35:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e80fb97
Fri 12 May 2023 12:39:03 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
86c68fb
Fri 12 May 2023 12:39:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:10: error: incompatible types when returning type ‘Heap’ {aka ‘struct Heap’} but ‘Heap *’ {aka ‘struct Heap *’} was expected
   42 |   return *heap;
      |          ^~~~~
heap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
caeaf98
Fri 12 May 2023 12:39:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0aec151
Fri 12 May 2023 12:40:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e4a68f1
Fri 12 May 2023 12:41:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b650d7
Fri 12 May 2023 12:42:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
07272c0
Fri 12 May 2023 12:46:11 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
e3d0ff1
Fri 12 May 2023 12:48:16 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6f6abad
Fri 12 May 2023 12:58:08 PM UTC: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|2
total_score: 20/70
c571b43
Fri 12 May 2023 01:00:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
5f8e2d4
Fri 12 May 2023 01:00:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5846b11
Fri 12 May 2023 01:03:52 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
2a8c986
Fri 12 May 2023 01:04:35 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:50:3: error: implicit declaration of function ‘prinf’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   50 |   prinf("\n");
      |   ^~~~~
      |   printf
cc1: all warnings being treated as errors
Compilation failed
d9cc613
Fri 12 May 2023 01:04:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e17268c
Fri 12 May 2023 01:05:27 PM UTC: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|2
total_score: 20/70
1417d72
Fri 12 May 2023 01:05:58 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
85f4f0c
Fri 12 May 2023 01:06:25 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
72c05be
